--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Structure for node app ",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "dev:inspect": "nodemon --inspect src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Pablo Emilio Pupo Marchena",
   "license": "ISC",
@@ -24,5 +29,35 @@
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "node",
+      "json"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    },
+    "testEnvironment": "node",
+    "testTimeout": 30000,
+    "collectCoverage": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test && pretty-quick --staged",
+      "pre-push": "npm run lint && npm test"
+    }
   }
 }
