Config Package.json

--- a/package.json
+++ b/package.json
@@ -14,12 +14,28 @@
   "author": "Pablo Emilio Pupo Marchena",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.4",
+    "@types/reflect-metadata": "^0.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "typeorm": "^0.2.29"
+    "multer": "^1.4.2",
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.9.0-alpha.6",
+    "swagger-jsdoc": "^5.0.0",
+    "swagger-ui-express": "^4.1.4",
+    "tsconfig-paths": "^3.9.0",
+    "typedi": "^0.8.0",
+    "typeorm": "^0.2.29",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/node": "^14.14.6",
+    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.2",
+    "auto-changelog": "^2.2.1",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
@@ -29,6 +45,23 @@
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
+  },
+  "auto-changelog": {
+    "output": "CHANGELOG.md",
+    "template": "changelog",
+    "unreleased": true,
+    "commitLimit": false,
+    "issueUrl": "http://jira.user.com.br/browse/{id}",
+    "replaceText": {
+      "[Ff]eature:": "",
+      "[Ff]ix:": "",
+      "[Bb]reak:": "",
+      "^ #(.{6})\\s": "[$1](https://app.clickup.com/t/$1) - "
+    },
+    "includeBranch": [
+      "develop",
+      "master"
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
