--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "tsc -p tsconfig.json",
     "dev:inspect": "nodemon --inspect src/index.ts",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "changelog": "auto-changelog --template src/templates/changelog.hbs -p && git add CHANGELOG.md",
+    "changelog:debug": "auto-changelog --template src/templates/changelog.hbs -p --template json --output changelog-data.json",
+    "lint": "tslint -p tsconfig.json"
   },
   "author": "Pablo Emilio Pupo Marchena",
   "license": "ISC",
