--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
     "@types/reflect-metadata": "^0.1.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "reflect-metadata": "^0.1.13",
@@ -35,6 +38,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.2",
