--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Pablo Emilio Pupo Marchena",
   "license": "ISC",
   "dependencies": {
+    "@types/i18next-node-fs-backend": "^2.1.0",
     "@types/jest": "^26.0.15",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
@@ -25,6 +26,9 @@
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "i18next": "^19.8.4",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-node-fs-backend": "^2.1.3",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
