--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
     "@types/reflect-metadata": "^0.1.0",
+    "@types/supertest": "^2.0.10",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
@@ -52,6 +53,7 @@
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.3",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
@@ -91,7 +93,7 @@
     },
     "globals": {
       "ts-jest": {
-        "tsConfig": "tsconfig.json"
+        "tsconfig": "tsconfig.json"
       }
     },
     "testEnvironment": "node",
