--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:watch": "jest --watch",
     "changelog": "auto-changelog --template src/templates/changelog.hbs -p && git add CHANGELOG.md",
     "changelog:debug": "auto-changelog --template src/templates/changelog.hbs -p --template json --output changelog-data.json",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "copy:docs": "cpy 'docs/**/*.yaml' '../dist/' --cwd=src --parents"
   },
   "author": "Pablo Emilio Pupo Marchena",
   "license": "ISC",
@@ -99,11 +100,5 @@
     "testEnvironment": "node",
     "testTimeout": 30000,
     "collectCoverage": true
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint && npm test && pretty-quick --staged",
-      "pre-push": "npm run lint && npm test"
-    }
   }
 }
