--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm test && pretty-quick --staged"
+      "pre-commit": "npm run lint && npm test && pretty-quick --staged",
+      "pre-push": "npm run lint && npm test"
     }
   }
 }
