--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "changelog": "auto-changelog --template src/templates/changelog.hbs -p && git add CHANGELOG.md",
     "changelog:debug": "auto-changelog --template src/templates/changelog.hbs -p --template json --output changelog-data.json",
     "lint": "tslint -p tsconfig.json",
-    "copy:docs": "cpy 'docs/**/*.yaml' '../dist/' --cwd=src --parents"
+    "copy:docs": "cpy 'docs/**/*.yaml' '../dist/' --cwd=src --parents",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm:version": "npm run typeorm version",
+    "migration:generate": "npm run typeorm migration:generate -- -n",
+    "migration:create": "npm run typeorm migration:create -- -n",
+    "migration:run": "npm run typeorm migration:run",
+    "migration:revert": "npm run typeorm migration:revert",
+    "migration:show": "npm run typeorm migration:show"
   },
   "author": "Pablo Emilio Pupo Marchena",
   "license": "ISC",
@@ -39,6 +46,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
     "swagger-jsdoc": "^5.0.0",
