Change structure folder

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,23 @@
 #ENV Variables
-PORT=3000
+PORT=4000
 NODE_ENV="development"
+
+#JWT
+JWT_SECRET="somesecrettoken"
+
+#Type ORM
+TYPE_ORM_ENTITIES_DIR="src/**/domain"
+TYPE_ORM_MIGRATIONS_DIR="src/migrations"
+TYPE_ORM_SUBSCRIBERS_DIR="src/subscribers"
+TYPE_ORM_LOGGING="all"
+
+#Database setup
+DATABASE_TYPE="postgres"
+DATABASE_HOST="localhost"
+DATABASE_PORT=5432
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="root"
+DATABASE_NAME="youtube"
+DATABASE_ENTITY_DIRECTORY="src/**/*model{.ts,.js}"
+DATABASE_MIGRATIONS_DIRECTORY="src/migrations/**/*{.ts,.js}"
+DATABASE_SUBSCRIBERS_DIRECTORY="src/migrations/**/*{.ts,.js}"
