--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "i18next": "^19.8.4",
