Change route folder video

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,8 +18,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "plugins": [{"name": "typescript-tslint-plugin"}]
+    "jsx": "react-jsx",
+    "plugins": [
+      {
+        "name": "typescript-tslint-plugin"
+      }
+    ]
   },
   "include": [
     "src"
