--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
+    "javascript-time-ago": "^2.3.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/javascript-time-ago": "^2.0.1",
     "@types/react-redux": "^7.1.11"
   }
 }
