chore: add dockerfile
dockerfile to execute

--- a/server/.env.example
+++ b/server/.env.example
@@ -13,11 +13,11 @@ TYPE_ORM_LOGGING="all"
 
 #Database setup
 DATABASE_TYPE="postgres"
-DATABASE_HOST="localhost"
+DATABASE_HOST="db_postgres"
 DATABASE_PORT=5432
 DATABASE_USER="postgres"
-DATABASE_PASSWORD="root"
-DATABASE_NAME="youtube"
+DATABASE_PASSWORD="postgres"
+DATABASE_NAME="youtube_clon"
 DATABASE_ENTITY_DIRECTORY="src/**/*model{.ts,.js}"
 DATABASE_MIGRATIONS_DIRECTORY="src/migrations/**/*{.ts,.js}"
 DATABASE_SUBSCRIBERS_DIRECTORY="src/migrations/**/*{.ts,.js}"
