--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "i18next-express-middleware": "^2.0.0",
     "i18next-node-fs-backend": "^2.1.3",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -78,6 +79,18 @@
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
+  },
+  "_moduleAliases": {
+    "@user": "src/api/user"
+    ,
+    "@video": "src/api/video"
+    ,
+    "@shared": "src/api/shared"
+    ,
+    "@middlewares": "src/middlewares"
+    ,
+    "@constants": "src/constants"
+  
   },
   "auto-changelog": {
     "output": "CHANGELOG.md",
