--- a/clientnext/package.json
+++ b/clientnext/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "sass": "^1.32.11",
     "typescript": "^4.2.4"
   },
