chore: config example

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,7 @@ NODE_ENV="development"
 JWT_SECRET="somesecrettoken"
 
 #Type ORM
-TYPE_ORM_ENTITIES_DIR="src/**/domain"
+TYPE_ORM_ENTITIES_DIR="src/**/typeorm"
 TYPE_ORM_MIGRATIONS_DIR="src/migrations"
 TYPE_ORM_SUBSCRIBERS_DIR="src/subscribers"
 TYPE_ORM_LOGGING="all"
@@ -18,6 +18,6 @@ DATABASE_PORT=5432
 DATABASE_USER="postgres"
 DATABASE_PASSWORD="postgres"
 DATABASE_NAME="youtube_clon"
-DATABASE_ENTITY_DIRECTORY="src/**/*model{.ts,.js}"
+DATABASE_ENTITY_DIRECTORY="src/context/**/*model{.ts,.js}"
 DATABASE_MIGRATIONS_DIRECTORY="src/migrations/**/*{.ts,.js}"
 DATABASE_SUBSCRIBERS_DIRECTORY="src/migrations/**/*{.ts,.js}"
