--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "enzyme": "^3.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.2.3",
@@ -20,6 +21,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "sass": "^1.32.11",
     "typescript": "^4.2.4",
@@ -50,8 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-logger": "^3.0.8",
+    "@types/redux-mock-store": "^1.0.2",
     "redux-logger": "^3.0.6"
   }
 }
